--- a/templates/main.html
+++ b/templates/main.html
@@ -5,20 +5,22 @@
     <link rel = "stylesheet" type = "text/css" href = " {{ url_for('static',
                                                        filename =
                                                        'mystyle.css') }} ">
-
   </head>
   <body onload = "load()">
     <div id = "wrapper">
       <div id = "header"> Sandman's Here!!</div>
       <div id = "features">
-        <canvas id = "gesture" width = "1500px" height = "800px"></canvas>
+        <canvas id = "gesture" width = "1500px" height = "800px">
+        </canvas>
       </div>
-      <div class = "tab" id = "tab1"></div>
-      <div class = "tab"></div>
-      <div class = "tab"></div>
-      <div class = "tab"></div>
-      <div class = "tab"></div>
-      <div class = "tab"></div>
+      <div id = "tabs">
+        <div class = "tab" id = "tab1"></div>
+        <div class = "tab" id = "tab2"></div>
+        <div class = "tab" id = "tab3"></div>
+        <div class = "tab" id = "tab4"></div>
+        <div class = "tab" id = "tab5"></div>
+        <div class = "tab" id = "tab6"></div>
+      </div>
     </div>
   </body>
   <script src = "//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js">
